@@ -66,7 +66,6 @@ static void appendDefValue(const char* t, size_t l) { LEXP->appendDefValue(t, l)
 %}
 
 %x ARGMODE
-%x CMTBEGM
 %x CMTMODE
 %x CMTONEM
 %x DEFCMT
@@ -420,6 +419,16 @@ bom             [\357\273\277]
 <ARGMODE>[^\/\*\n\r\\(,){}\[\]\"`]+     |
 <ARGMODE>.              { FL_FWDC; appendDefValue(yytext, yyleng); FL_BRK; }
 
+        /* Pragma comments. */
+<INITIAL>"//"{ws}*"verilator lint_off"[^\n\r]*       { FL_FWDC; LEXP->verilatorCmtLint(yytext + 2, true); return VP_COMMENT; }
+<INITIAL>"//"{ws}*"verilator lint_on"[^\n\r]*        { FL_FWDC; LEXP->verilatorCmtLint(yytext + 2, false); return VP_COMMENT; }
+<INITIAL>"//"{ws}*"verilator lint_restore"[^\n\r]*   { FL_FWDC; LEXP->verilatorCmtLintRestore(); return VP_COMMENT; }
+<INITIAL>"//"{ws}*"verilator lint_save"[^\n\r]*      { FL_FWDC; LEXP->verilatorCmtLintSave(); return VP_COMMENT; }
+<INITIAL>"/*"{ws}*"verilator lint_off"[^*]*"*/"      { FL_FWDC; LEXP->verilatorCmtLint(yytext + 2, true); return VP_COMMENT; }
+<INITIAL>"/*"{ws}*"verilator lint_on"[^*]*"*/"       { FL_FWDC; LEXP->verilatorCmtLint(yytext + 2, false); return VP_COMMENT; }
+<INITIAL>"/*"{ws}*"verilator lint_restore"[^*]*"*/"  { FL_FWDC; LEXP->verilatorCmtLintRestore(); return VP_COMMENT; }
+<INITIAL>"/*"{ws}*"verilator lint_save"[^*]*"*/"     { FL_FWDC; LEXP->verilatorCmtLintSave(); return VP_COMMENT; }
+
         /* One line comments. */
 <INITIAL>"//"{ws}*{crnl} { FL_FWDC; linenoInc(); yytext=(char*)"\n"; yyleng=1; return VP_WHITE; }
 <INITIAL>"//"           { yy_push_state(CMTONEM); yymore(); }
@@ -427,16 +436,13 @@ bom             [\357\273\277]
 
         /* C-style comments. */
         /**** See also DEFCMT */
-        /* We distinguish between the start of a comment, and later, to look for prefix comments (deprecated) */
 <INITIAL>"/*"           { yy_push_state(CMTMODE); yymore(); }
-<CMTBEGM>{ws}+          { yymore(); }
-<CMTBEGM,CMTMODE>"*/"           { FL_FWDC; yy_pop_state(); return VP_COMMENT; }
-<CMTBEGM,CMTMODE>{crnl}         { linenoInc(); yymore(); }
-<CMTBEGM,CMTMODE><<EOF>>        { FL_FWDC; yyerrorf("EOF in '/* ... */' block comment\n");
+<CMTMODE>"*/"           { FL_FWDC; yy_pop_state(); return VP_COMMENT; }
+<CMTMODE>{crnl}         { linenoInc(); yymore(); }
+<CMTMODE><<EOF>>        { FL_FWDC; yyerrorf("EOF in '/* ... */' block comment\n");
                                   yyleng=0; return VP_EOF_ERROR; }
-<CMTMODE>{word}                 { yymore(); }
-<CMTBEGM>.                      { yymore(); BEGIN CMTMODE; }    /* beginning in comment */
-<CMTMODE>.                      { yymore(); }
+<CMTMODE>{word}         { yymore(); }
+<CMTMODE>.              { yymore(); }
 
         /* Define calls */
         /* symbdef prevents normal lex rules from making `\`"foo a symbol {`"foo} instead of a BACKQUOTE */
@@ -733,6 +739,33 @@ void V3PreLex::unused() {
         yy_top_state();
         yyerror((char*)"");
     }  // LCOV_EXCL_STOP
+}
+
+void V3PreLex::verilatorCmtLintSave() {
+    m_lexLintState.push_back(*curFilelinep());
+}
+void V3PreLex::verilatorCmtLintRestore() {
+    // No error here on restore without save - the verilog.y parse will report as appropriate
+    if (m_lexLintState.empty()) return;
+    curFilelinep()->warnStateFrom(m_lexLintState.back());
+    m_lexLintState.pop_back();
+}
+void V3PreLex::verilatorCmtLint(const char* textp, bool warnOff) {
+    const char* sp = textp;
+    while (*sp && std::isspace(*sp)) ++sp;
+    while (*sp && !std::isspace(*sp)) ++sp;  // "verilator"
+    while (*sp && std::isspace(*sp)) ++sp;
+    while (*sp && !std::isspace(*sp)) ++sp;  // "lint_on/lint_off"
+    while (*sp && std::isspace(*sp)) ++sp;
+    string msg = sp;
+    for (auto pos = msg.begin(); pos != msg.end(); ++pos) {
+        if (std::isspace(*pos) || *pos == '*') {
+            msg.erase(pos, msg.end());
+            break;
+        }
+    }
+    // No warnings on bad warning codes - the verilog.y parse will report as appropriate
+    curFilelinep()->warnOff(msg, warnOff);
 }
 
 /*###################################################################
