@@ -16,6 +16,7 @@ Verilator 5.021 devel
 * Add predicted stack overflow warning (#4799).
 * Remove deprecated 32-bit pointer mode (`gcc -m32`).
 * Fix delays using wrong timeunits when modules inlined (#4806). [Paul Wright]
+* Fix lint_off disables on preprocessor warnings (#4703). [Srinivasan Venkataramanan]
 
 
 Verilator 5.020 2024-01-01
